Moved test_smart_worker.py into the folder workers

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 # command to run tests, e.g. python setup.py test
 script:
-  - nosetests -v --with-coverage
+  - nosetests -v --with-coverage . smartdispatch/workers
 
 after_success:
   - coveralls
